# teams-status-rs

./: .env.template  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  build.rs  cliff.toml  readme.md  release-plz.toml  teams_status.rc
.cargo/: config.toml
.github/workflows/: rust.yml
bruno/HA/: bruno.json  get api state.bru  post api state.bru
bruno/HA/environments/: HA.bru
src/: configuration.rs  error.rs  ha_api.rs  ha_configuration.rs  logging.rs  main.rs  mutex.rs  teams_api.rs  teams_configuration.rs  teams_states.rs  traits.rs  tray_linux.rs  tray_windows.rs  utils.rs
src/home_assistant/: api.rs  configuration.rs
src/mqtt/: api.rs  configuration.rs  mod.rs
src/teams/: api.rs  mod.rs  states.rs
src/teams_log/: file_locator.rs  file_notifier.rs  mod.rs  parser.rs  states.rs  watcher.rs
src/teams_ws/: api.rs  configuration.rs  states.rs
src/tray/: mod.rs
