[package]
name = "teams_status"
version = "1.2.0"
edition = "2021"

[package.metadata.winres]
ProductName = "Teams Status"
ProductVersion = "1.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# temporary until the following crate is updated with the new fixes
home-assistant-rest = { path = "./../home-assistant-rest" }
log = "0.4.27"
tokio-tungstenite = "0.27.0"
json = "0.12.4"
tokio = { version = "1.45.1", features = ["full"] }
tray-item = "0.10.0"
futures-util = "0.3.31"
log4rs = "1.3.0"
rust-ini = "0.21.1"
magic-crypt = "4.0.1"
rumqttc = "0.24.0"
serde_json = "1.0.140"
async-trait = "0.1.88"
anyhow = "1.0.98"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
md-5 = "0.10.6"
url = "2.5.4"
# regex = "1.10.3" # for teams_log
# notify = { version = "6.1.1" } # for teams_log

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Security",
    "Win32_System_Threading",
]

[build-dependencies]
winres = "0.1.12"
