[package]
name = "teams_status"
version = "1.3.1"
edition = "2021"

[package.metadata.winresource]
ProductName = "Teams Status"
ProductVersion = "1.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# temporary until the following crate is updated with the new fixes
home-assistant-rest = { path = "./../home-assistant-rest" }
log = "0.4.27"
tokio-tungstenite = "0.27.0"
json = "0.12.4"
tokio = { version = "1.46.1", features = ["full"] }
tray-icon = "0.21.0"
winit = "0.30"
futures-util = "0.3.31"
log4rs = "1.3.0"
rust-ini = "0.21.2"
magic-crypt = "4.0.1"
rumqttc = "0.24.0"
serde_json = "1.0.140"
async-trait = "0.1.88"
anyhow = "1.0.98"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
md-5 = "0.10.6"
url = "2.5.4"
image = "0.25.6"
# regex = "1.10.3" # for teams_log
# notify = { version = "6.1.1" } # for teams_log
auto-launch = "0.5.0"
winapi = { version = "0.3.9", features = ["winuser"] }

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Security",
    "Win32_System_Threading",
]

[build-dependencies]
winresource = "0.1.22"
